<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
        2026-09-18 二次修正：一级菜单只保留 5 个「入口」，
        点进去才是具体开关（嵌套 PreferenceScreen 由 PreferenceFragmentCompat 自动压栈，
        返回键逐层退回，SettingsActivity 的 onBackPressedDispatcher 已处理）。
        顺序：外观 / 推荐流相关 / 隐私 / 高级 / 其他
    -->

    <PreferenceScreen
        android:icon="@drawable/outline_palette_24"
        android:key="appearance"
        android:title="@string/settings_appearance">

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:icon="@drawable/outline_palette_24"
            android:key="followSystemAccent"
            android:title="@string/settings_system_theme_color" />
        <rikka.preference.SimpleMenuPreference
            android:defaultValue="DEFAULT"
            android:dependency="followSystemAccent"
            android:entries="@array/color_texts"
            android:entryValues="@array/color_values"
            android:icon="@drawable/outline_format_color_fill_24"
            android:key="themeColor"
            android:summary="%s"
            android:title="@string/settings_theme_color" />
        <rikka.preference.SimpleMenuPreference
            android:defaultValue="-1"
            android:entries="@array/theme_texts"
            android:entryValues="@array/theme_values"
            android:icon="@drawable/outline_dark_mode_24"
            android:key="darkTheme"
            android:summary="%s"
            android:title="@string/dark_theme" />
        <rikka.material.preference.MaterialSwitchPreference
            android:icon="@drawable/outline_invert_colors_24"
            android:key="blackDarkTheme"
            android:summary="@string/settings_pure_black_dark_theme_summary"
            android:title="@string/settings_pure_black_dark_theme" />
        <Preference
            android:icon="@drawable/ic_text_fields"
            android:key="fontScale"
            android:title="@string/font_scale" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_emoji"
            android:key="showEmoji"
            android:title="@string/show_emoji" />

    </PreferenceScreen>

    <PreferenceScreen
        android:icon="@drawable/ic_feed"
        android:key="recommendation"
        android:title="@string/settings_recommendation">

        <Preference
            android:icon="@drawable/ic_block"
            android:key="topicBlackList"
            android:title="@string/topic_black_list" />
        <Preference
            android:icon="@drawable/ic_text_fields"
            android:key="spamWord"
            android:title="@string/spam_shield_word" />
        <Preference
            android:icon="@drawable/ic_block"
            android:key="spamUser"
            android:title="@string/spam_shield_user" />
        <Preference
            android:icon="@drawable/ic_block"
            android:key="spamNode"
            android:title="@string/spam_shield_node" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_filter"
            android:key="isColorFilter"
            android:title="@string/color_filter_in_dark_mode" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_explorer"
            android:key="isOpenLinkOutside"
            android:title="@string/open_link_outside" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_feed"
            android:key="isIconMiniCard"
            android:title="@string/show_icon_mini_card" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_history"
            android:key="isRecordHistory"
            android:title="@string/record_history" />

    </PreferenceScreen>

    <PreferenceScreen
        android:icon="@drawable/ic_block"
        android:key="privacy"
        android:title="@string/settings_privacy">

        <Preference
            android:icon="@drawable/ic_block"
            android:key="userBlackList"
            android:title="@string/user_black_list" />

    </PreferenceScreen>

    <PreferenceScreen
        android:icon="@drawable/ic_dev_mode"
        android:key="advanced"
        android:title="@string/settings_advanced">

        <Preference
            android:icon="@drawable/ic_phone"
            android:key="szlmId"
            android:title="@string/szlmId" />
        <Preference
            android:icon="@drawable/ic_dev_mode"
            android:key="params"
            android:title="@string/params" />
        <Preference
            android:icon="@drawable/ic_image"
            android:key="imageQuality"
            android:title="@string/image_quality" />

    </PreferenceScreen>

    <PreferenceScreen
        android:icon="@drawable/ic_more"
        android:key="other"
        android:title="@string/settings_other">

        <PreferenceScreen
            android:icon="@drawable/ic_logo"
            android:key="about"
            android:title="@string/about">

            <!-- 「检查应用更新」从推荐流相关挪进关于 -->
            <rikka.material.preference.MaterialSwitchPreference
                android:defaultValue="true"
                android:icon="@drawable/outline_system_update_24"
                android:key="isCheckUpdate"
                android:title="@string/check_apps_update" />

            <Preference
                android:icon="@drawable/ic_logo"
                android:key="aboutPage"
                android:title="@string/settings_about_app" />

        </PreferenceScreen>

        <Preference
            android:icon="@drawable/ic_clean"
            android:key="clearCache"
            android:title="@string/clear_cache" />

    </PreferenceScreen>

</PreferenceScreen>
