<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/delete"
        android:showAsAction="never"
        android:title="@string/delete" />

    <!-- 默认隐藏，仅在「自己的动态」卡片上由 FeedViewHolder 打开 -->
    <item
        android:id="@+id/publishStatus"
        android:showAsAction="never"
        android:title="@string/change_publish_status"
        android:visible="false" />

    <!-- 个人主页置顶 / 取消置顶，同样只在「自己的动态」卡片上显示（标题按 isStickTop 切换） -->
    <item
        android:id="@+id/stickTop"
        android:showAsAction="never"
        android:title="@string/stick_top"
        android:visible="false" />

    <item
        android:id="@+id/copy"
        android:showAsAction="never"
        android:title="@string/copyText" />

    <item
        android:id="@+id/report"
        android:showAsAction="never"
        android:title="@string/report" />

    <item
        android:id="@+id/show"
        android:showAsAction="never"
        android:title="@string/show_reply_1" />

    <item
        android:id="@+id/block"
        android:showAsAction="never"
        android:title="@string/block" />

</menu>
